<resources>
    <string name="app_name">Memoir</string>
    <string name="action_settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="journal_image">Journal Entry Image</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="write_about_yourself">Write about yourself</string>
    <string name="enter_your_bio">Enter your bio</string>
    <string name="save_profile">Save Profile</string>
    <string name="text_view">Lorem Ipsum</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="journal_entry_activity_title">Add Journal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="change_pic_button">Change Pic</string>
    <string name="title_activity_journal_entry">JournalEntryActivity</string>
    <string name="enter_journal_message">Enter your journal here</string>
    <string name="male_female_other">Male/Female/Other</string>
    <string name="date_format">DD/MM/YYYY</string>
</resources>
