<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sagar.memoir.MainActivity">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_today_black_24dp"
        android:orderInCategory="100"
        android:title="@string/calendar" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_book_black_24dp"
        android:orderInCategory="200"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_create_black_24dp"
        android:orderInCategory="300"
        android:title="@string/action_settings" />

</menu>
