<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigation_settings"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <!-- TODO: Update blank fragment layout -->


            <TextView
                android:id="@+id/textViewDOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/date_format"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <Button
                android:id="@+id/buttonEditProfile"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:enabled="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/divider2"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/male_female_other"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/gender"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/date_of_birth"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

            <View
                android:id="@+id/divider2"
                android:layout_width="368dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDOB" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:text="@string/text_view"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <Button
                android:id="@+id/buttonSaveProfile"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@string/save_profile"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:typeface="sans"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/buttonEditProfile"
                app:layout_constraintEnd_toEndOf="@+id/buttonEditProfile"
                app:layout_constraintStart_toStartOf="@+id/buttonEditProfile"
                app:layout_constraintTop_toTopOf="@+id/buttonEditProfile"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/divider"
                android:layout_width="368dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonImageChange" />

            <TextView
                android:id="@+id/textViewTitleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_view"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewPerson"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_account_circle_black_256dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitleName" />


            <EditText
                android:id="@+id/editTextBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/enter_your_bio"
                android:inputType="textMultiLine"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewPerson"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewPerson"
                app:layout_constraintTop_toTopOf="@+id/imageViewPerson" />

            <TextView
                android:id="@+id/textViewBio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawableBottom="@drawable/ic_write_black_24dp"
                android:drawablePadding="5dp"
                android:singleLine="false"
                android:text="@string/write_about_yourself"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/editTextBio"
                app:layout_constraintEnd_toEndOf="@+id/editTextBio"
                app:layout_constraintStart_toStartOf="@+id/editTextBio"
                app:layout_constraintTop_toTopOf="@+id/editTextBio" />

            <Button
                android:id="@+id/buttonImageChange"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorAccent"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:text="@string/change_pic_button"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="@+id/imageViewPerson"
                app:layout_constraintStart_toStartOf="@+id/imageViewPerson"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPerson" />

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/editDOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</FrameLayout>